add swager docs for POS tables
